[package]
name = "vulkano-tutorial"
version = "0.1.0"
authors = ["Guillaume Gomez <guillaume.gomez846@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.21"
vulkano = "0.14"
vulkano-shaders = "0.14"
vulkano-win = "0.14"
winit = "0.19"
rand = "0.7.2"