[package]
name = "vulkano-tutorial"
version = "0.1.0"
authors = ["Guillaume Gomez <guillaume.gomez846@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit     = "0.20.0"
ash       = "0.29.0"
num       = "0.2"
cgmath    = "0.17.0"
image     = "0.22"
memoffset = "0.5.1"
tobj      = "0.1.10"

[dependencies.bitflags]
version = ">= 1.0.4"
